policy_notebook.ipynb

--- a/policy_notebook.ipynb
+++ b/policy_notebook.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "\n",
     "\n",
-    "We found that the UK Government actually runs two separate petition platforms — one current and one archived. The archived version includes over 50,000 petitions from 2010 to 2024, which is great in terms of volume and history. But it doesn't include open petitions anymore, and we can't access structured data like government responses or real-time status updates. Since our project is about how people engage with the current platform, and we’re aiming to give practical recommendations for improving it, we decided to focus on the live petition site. It gives us everything we need — like petition status, signature thresholds, and whether a petition got an official response — and it fits our research questions and audience much better.\n",
+    "We found that the UK Government actually runs two separate petition platforms — one current and one archived. The archived version includes over 50,000 petitions from 2010 to 2024, which is great in terms of volume and history. But it doesn't include open petitions anymore, and we can't access structured data like government responses or real-time status updates. Since our project is about how people engage with the current platform and we’re aiming to give practical recommendations for improving it, we decided to focus on the ongoing petitions dataset. Inasmuch as it provides petition status, signature thresholds, and whether a petition got an official response — and it fits our research questions and audience much better.\n",
     "\n"
    ]
   },
